--- a/_config.yml
+++ b/_config.yml
@@ -17,16 +17,15 @@
 
 # Language of your content in 2-letter code, e.g.: en, de.
 # You may also provide a location, e.g.: en-us, de_AT.
-lang:                  en
+lang:                ko-KR, en-US
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Starter Kit
+title:                 Dr. 느믈느믈's Journey to Deep Learning
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
 description:           >
-  Hydejack is a boutique Jekyll theme for hackers, nerds, and academics,
-  with a focus on personal sites that are meant to impress.
+  A journey to understand, implement and break-through Deep Learning
 
 # A shorter description for the sidebar.
 tagline:               Change `tagline` in `_config.yml`
@@ -42,8 +41,8 @@ logo:                  /assets/img/logo.png
 # This should be the same author as first entry in `_data/authors.yml`.
 author:
   # Used by `jekyll-feed`:
-  name:                <firstname> <lastname>
-  email:               <mail@domain.tld>
+  name:               Dr. 느믈느믈
+  email:               nomail@nodomain.no
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
