--- a/_config.yml
+++ b/_config.yml
@@ -20,7 +20,9 @@
 lang:                ko-KR, en-US
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 Dr. 느믈느믈's Journey to Deep Learning
+title:                 Dr. 느믈느믈's 
+                        Journey to 
+                      Deep Learning
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -66,7 +68,7 @@ legal:
     url:               /CHANGELOG/
 
 # This text will appear in a `<small>` tag in the footer of every page.
-copyright:             © 2024. All rights reserved.
+copyright:             © 2026. All rights reserved.
 
 # Format of the permalinks
 permalink:             /:categories/:year-:month-:day-:title/
