--- a/_config.yml
+++ b/_config.yml
@@ -50,6 +50,8 @@ author:
 
 # Add links to the sidebar.
 menu:
+  - title:             Math
+    url:               /10_math/
   - title:             Example
     url:               /example/
   - title:             Documentation
