--- a/_config.yml
+++ b/_config.yml
@@ -51,7 +51,7 @@ author:
 # Add links to the sidebar.
 menu:
   - title:             Math
-    url:               /10_math/
+    url:               /math/
   - title:             Example
     url:               /example/
   - title:             Documentation
