--- a/_config.yml
+++ b/_config.yml
@@ -53,7 +53,7 @@ menu:
   - title:             Math
     url:               /math/
   - title:             Deep Learning
-    url:               /deep_learning/
+    url:               /deeplearning/
   - title:             Example
     url:               /example/
   - title:             Documentation
