--- a/_config.yml
+++ b/_config.yml
@@ -50,16 +50,18 @@ author:
 
 # Add links to the sidebar.
 menu:
+  - title:             About
+    url:               /about/
   - title:             Math
     url:               /math/
   - title:             Deep Learning
     url:               /deeplearning/
+  - title:             NPUs
+    url:               /npus/
   - title:             Example
     url:               /example/
   - title:             Documentation
     url:               /docs/
-  - title:             About
-    url:               /about/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
