--- a/_config.yml
+++ b/_config.yml
@@ -58,10 +58,8 @@ menu:
     url:               /deeplearning/
   - title:             NPUs
     url:               /npus/
-  - title:             Example
-    url:               /example/
-  - title:             Documentation
-    url:               /docs/
+  - title:             Misc
+    url:               /misc/
 
 # Add links to the footer.
 # Typically you'll want to link to your cookie- or privacy policy (if appliable), etc..
