--- a/_config.yml
+++ b/_config.yml
@@ -54,6 +54,15 @@ menu:
     url:               /about/
   - title:             Math
     url:               /math/
+    submenu: 
+      - title:         Algebra
+        url:           /algebra/
+      - title:         Linear Algebra
+        url:           /linearalgebra/
+      - title:         Matrix Analysis
+        url:           /matrixanalysis/
+      - title:         Math Etc.
+        url:           /mathetc/
   - title:             Deep Learning
     url:               /deeplearning/
   - title:             NPUs
