--- a/_config.yml
+++ b/_config.yml
@@ -41,7 +41,7 @@ logo:                  /assets/img/logo.png
 author:
   # Used by `jekyll-feed`:
   name:                seunghw
-  email:                seunghw-lee@gmail.com
+  email:                dont@mail.me
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
