--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,9 @@ baseurl:               '/seunghw-AI-blog'
 lang:                  ko-KR, en-US
 
 # The title of your blog. Used in the sidebar and the browser tab.
-title:                 seunghw AI blog.
+title:                 Dr. 느믈느믈's 
+                        Journey to 
+                      Deep Learning
 
 # A short description (~150 chars) of the page used for the meta description tag.
 # Can use markdown, but no more than one paragraph (enforced by `>`)
@@ -41,7 +43,7 @@ logo:                  /assets/img/logo.png
 author:
   # Used by `jekyll-feed`:
   name:                seunghw
-  email:                dont@mail.me
+  email:                seunghw-lee@gmail.com
   # # Used by `jekyll-seo-tag`:
   # twitter:             <username>
 
