--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -24,45 +24,61 @@ permissions:
 # However, do NOT cancel in-progress runs as we want to allow these production deployments to complete.
 concurrency:
   group: "pages"
-  cancel-in-progress: false
+  # cancel-in-progress: false
+  cancel-in-progress: true     # S.H.Lee - 2026.02.24
+
 
 jobs:
-  # Build job
-  build:
+# Build & Deploy Job
+  gh_pages:
+    name: Build & Deploy Github Pages
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.gh_pages.outputs.page_url }}
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Setup Ruby
-        # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
-        uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
-        with:
-          # ruby-version: '3.1' # Not needed with a .ruby-version file
-          ruby-version: '3.3.6' # S.H.Lee - 2026.02.23 
-          # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          bundler-cache: false # runs 'bundle install' and caches installed gems automatically
-          # cache-version: 0 # Increment this number if you need to re-download cached gems
-          cache-version: 1 # Increment this number if you need to re-download cached gems
-      - name: Setup Pages
-        id: pages
-        uses: actions/configure-pages@v5
-      - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
-        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
-        env:
-          JEKYLL_ENV: production
-      - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
-        uses: actions/upload-pages-artifact@v3
+      - name: Build & Deploy
+        id: gh_pages
+        uses: dunkmann00/jekyll-v4-gh-pages@v1
+  #
+  # # Build job
+  # build:
+  #   runs-on: ubuntu-latest
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v4
+  #     - name: Setup Ruby
+  #       # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
+  #       uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
+  #       with:
+  #         # ruby-version: '3.1' # Not needed with a .ruby-version file
+  #         ruby-version: '3.3.6'    # S.H.Lee - 2026.02.23 
+  #         # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+  #         bundler-cache: false # runs 'bundle install' and caches installed gems automatically
+  #         # cache-version: 0 # Increment this number if you need to re-download cached gems
+  #         cache-version: 1 # Increment this number if you need to re-download cached gems
+  #     - name: Setup Pages
+  #       id: pages
+  #       uses: actions/configure-pages@v5
+  #     - name: Build with Jekyll
+  #       # Outputs to the './_site' directory by default
+  #       run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+  #       env:
+  #         JEKYLL_ENV: production
+  #     - name: Upload artifact
+  #       # Automatically uploads an artifact from the './_site' directory by default
+  #       uses: actions/upload-pages-artifact@v3
 
-  # Deployment job
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+  # # Deployment job
+  # deploy:
+  #   environment:
+  #     name: github-pages
+  #     url: ${{ steps.deployment.outputs.page_url }}
+  #   runs-on: ubuntu-latest
+  #   needs: build
+  #   steps:
+  #     - name: Deploy to GitHub Pages
+  #       id: deployment
+  #       uses: actions/deploy-pages@v4
