--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -29,7 +29,7 @@ concurrency:
 
 
 jobs:
-# Build & Deploy Job
+# Build & Deploy Job - from dunkmann00 - S.H.Lee - 2026.02.24
   gh_pages:
     name: Build & Deploy Github Pages
     runs-on: ubuntu-latest
