--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -37,14 +37,21 @@ jobs:
       name: github-pages
       url: ${{ steps.gh_pages.outputs.page_url }}
     steps:
+     - name: Setup GutHub Cache
+       uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: ${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}
+          restore-keys: |
+            ${{ runner.os }}-gems-
      - name: Setup Ruby
        # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
-       uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
+       # uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
        with:
        # ruby-version: '3.1' # Not needed with a .ruby-version file
        ruby-version: '3.3.6' # S.H.Lee - 2026.02.23 
        bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-       cache-version: 0 # Increment this number if you need to re-download cached gems
+       # cache-version: 0 # Increment this number if you need to re-download cached gems
       - name: Checkout
         uses: actions/checkout@v4
       - name: Build & Deploy
