--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -27,7 +27,7 @@ concurrency:
   # cancel-in-progress: false
   cancel-in-progress: true     # S.H.Lee - 2026.02.24
 
-obs:
+jobs:
   # Build job
   build:
     runs-on: ubuntu-latest
@@ -36,13 +36,13 @@ obs:
         uses: actions/checkout@v4
       - name: Setup Ruby
         # https://github.com/ruby/setup-ruby/releases/tag/v1.207.0
-        uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
+        # uses: ruby/setup-ruby@4a9ddd6f338a97768b8006bf671dfbad383215f4
         with:
           # ruby-version: '3.1' # Not needed with a .ruby-version file
           ruby-version: '3.3.6' # S.H.Lee - 2026.02.23 
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           # cache-version: 0 # Increment this number if you need to re-download cached gems
-          cache-version: 1 # Increment this number if you need to re-download cached gems
+          # cache-version: 1 # Increment this number if you need to re-download cached gems
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v5
