starting addernet study...

--- a/_config.yml
+++ b/_config.yml
@@ -68,7 +68,7 @@ menu:
       - title:         Adder Net
         url:           /addernet/
       - title:         Stochastic Computing
-        url:           /stoc_comp/
+        url:           /stoccomp/
   - title:             NPUs
     url:               /npus/
   - title:             My Misc...
